--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 kidletime (4.97.0-0ubuntu1) UNRELEASED; urgency=medium
 
   * New upstream alpha release
+  * Rename library package for soname 5
 
  -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 03 Mar 2014 12:20:44 +0000
 
