--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kidletime (4.98.0-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream beta release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Sat, 29 Mar 2014 10:55:44 +0000
+
 kidletime (4.97.0-0ubuntu1) trusty; urgency=medium
 
   * New upstream alpha release
