--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kidletime (4.99.0-0ubuntu1) UNRELEASED; urgency=medium
+kidletime (4.99.0-0ubuntu1) trusty; urgency=medium
 
   * New upstream beta release
 
