--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kidletime (4.99.0-0ubuntu2) UNRELEASED; urgency=medium
+
+  * Install *.pri files in arch dependent path.
+
+ -- José Manuel Santamaría Lema <panfaust@gmail.com>  Sat, 31 May 2014 00:50:29 +0200
+
 kidletime (4.99.0-0ubuntu1) trusty; urgency=medium
 
   * New upstream beta release
