--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 kidletime (4.99.0-0ubuntu2) UNRELEASED; urgency=medium
 
   * Install *.pri files in arch dependent path.
+  * Add libxss-dev to Build-Depends.
 
  -- José Manuel Santamaría Lema <panfaust@gmail.com>  Sat, 31 May 2014 00:50:29 +0200
 
