--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kidletime (4.100.0-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream beta release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 02 Jun 2014 13:39:55 +0100
+
 kidletime (4.99.0-0ubuntu1) trusty; urgency=medium
 
   [ José Manuel Santamaría Lema ]
