--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-kidletime (5.0.0-0ubuntu1) UNRELEASED; urgency=medium
+kidletime (5.0.0-0ubuntu1) utopic; urgency=medium
 
+  [ Jonathan Riddell ]
   * Initial stable upstream release
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 02 Jul 2014 00:36:40 +0200
+ -- Rohan Garg <rohangarg@kubuntu.org>  Thu, 10 Jul 2014 13:34:48 +0200
