--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+kidletime (5.0.0-0ubuntu2) UNRELEASED; urgency=medium
+
+  * Update libraries *.install paths so a soname bump doesn't go
+    unnoticed.
+
+ -- José Manuel Santamaría Lema <panfaust@gmail.com>  Mon, 21 Jul 2014 00:14:31 +0200
+
 kidletime (5.0.0-0ubuntu1) utopic; urgency=medium
 
   [ Jonathan Riddell ]
