--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
-kidletime (5.0.0-0ubuntu2) UNRELEASED; urgency=medium
+kidletime (5.1.0-0ubuntu1) UNRELEASED; urgency=medium
 
+  [ José Manuel Santamaría Lema ]
   * Update libraries *.install paths so a soname bump doesn't go
     unnoticed.
 
- -- José Manuel Santamaría Lema <panfaust@gmail.com>  Mon, 21 Jul 2014 00:14:31 +0200
+  [ Scarlett Clark ]
+  * New upstream release
+
+ -- Scarlett Clark <scarlett@scarlettgatelyclark.com>  Sun, 03 Aug 2014 18:51:31 -0700
 
 kidletime (5.0.0-0ubuntu1) utopic; urgency=medium
 
