--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kidletime (5.1.0-0ubuntu1) UNRELEASED; urgency=medium
+kidletime (5.1.0-0ubuntu1) utopic; urgency=medium
 
   [ José Manuel Santamaría Lema ]
   * Update libraries *.install paths so a soname bump doesn't go
@@ -7,7 +7,7 @@ kidletime (5.1.0-0ubuntu1) UNRELEASED; urgency=medium
   [ Scarlett Clark ]
   * New upstream release
 
- -- Scarlett Clark <scarlett@scarlettgatelyclark.com>  Sun, 03 Aug 2014 18:51:31 -0700
+ -- Scarlett Clark <scarlett@scarlettgatelyclark.com>  Tue, 05 Aug 2014 17:11:27 +0200
 
 kidletime (5.0.0-0ubuntu1) utopic; urgency=medium
 
