--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-kidletime (5.2.0-0ubuntu1) UNRELEASED; urgency=medium
+kidletime (5.2.0-0ubuntu1) utopic; urgency=medium
 
   * New upstream release
   * Use pkg-kde-tools version 3 scripts
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 11 Sep 2014 20:39:54 +0000
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 22 Sep 2014 19:40:18 +0200
 
 kidletime (5.1.0-0ubuntu1) utopic; urgency=medium
 
