--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kidletime (5.3.0-0ubuntu1) UNRELEASED; urgency=medium
+kidletime (5.3.0-0ubuntu1) utopic; urgency=medium
 
   * New upstream release
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 06 Oct 2014 11:32:13 +0100
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 07 Oct 2014 11:14:11 +0100
 
 kidletime (5.2.0-0ubuntu1) utopic; urgency=medium
 
