--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kidletime (5.4.0-0ubuntu1) UNRELEASED; urgency=medium
+kidletime (5.4.0-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 03 Nov 2014 18:33:38 +0100
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Fri, 07 Nov 2014 15:04:40 +0100
 
 kidletime (5.3.0-0ubuntu1) utopic; urgency=medium
 
