--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kidletime (5.5.0-0ubuntu1) UNRELEASED; urgency=medium
+kidletime (5.5.0-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Thu, 11 Dec 2014 14:05:47 -0800
+ -- Scarlett Clark <sgclark@kubuntu.org>  Mon, 15 Dec 2014 12:46:27 +0100
 
 kidletime (5.4.0-0ubuntu1) vivid; urgency=medium
 
