--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kidletime (5.6.0-0ubuntu1) UNRELEASED; urgency=medium
+kidletime (5.6.0-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 05 Jan 2015 13:04:58 +0100
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 06 Jan 2015 19:50:31 +0100
 
 kidletime (5.5.0-0ubuntu1) vivid; urgency=medium
 
