--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 kidletime (5.6.0-1~) UNRELEASED; urgency=medium
 
   * New upstream release (5.6.0).
+  * Bump build dependencies to build against the experimental versions.
 
  -- Maximiliano Curia <maxy@debian.org>  Fri, 23 Jan 2015 13:05:36 +0100
 
