--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ kidletime (5.6.0-1~) UNRELEASED; urgency=medium
   * Update install files.
   * Update build dependencies to follow cmake.
   * Update copyright information.
+  * Add basic autopkgtests support.
 
  -- Maximiliano Curia <maxy@debian.org>  Fri, 23 Jan 2015 13:05:36 +0100
 
