--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kidletime (5.6.0-1~) UNRELEASED; urgency=medium
+kidletime (5.6.0-1) experimental; urgency=medium
 
   * New upstream release (5.6.0).
   * Bump build dependencies to build against the experimental versions.
@@ -8,7 +8,7 @@ kidletime (5.6.0-1~) UNRELEASED; urgency=medium
   * Update copyright information.
   * Add basic autopkgtests support.
 
- -- Maximiliano Curia <maxy@debian.org>  Fri, 23 Jan 2015 13:05:36 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 23 Jan 2015 13:54:46 +0100
 
 kidletime (5.2.0-0ubuntu1) utopic; urgency=medium
 
