--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kidletime (5.7.0-0ubuntu1) UNRELEASED; urgency=medium
+kidletime (5.7.0-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
 
- -- Harald Sitter <sitter@kde.org>  Mon, 09 Feb 2015 09:54:45 +0100
+ -- Harald Sitter <sitter@kde.org>  Tue, 10 Feb 2015 16:20:00 +0100
 
 kidletime (5.6.0-0ubuntu1) vivid; urgency=medium
 
