--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ kidletime (5.7.0-1~) UNRELEASED; urgency=medium
 
   * New upstream release (5.7.0).
   * Update build dependencies.
+  * Update copyright information.
 
  -- Maximiliano Curia <maxy@debian.org>  Tue, 24 Feb 2015 17:37:13 +0100
 
