--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kidletime (5.10.0-0ubuntu2) UNRELEASED; urgency=medium
+
+  * Add pkg-config
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 15 Jun 2015 07:08:38 +0200
+
 kidletime (5.10.0-0ubuntu1) wily; urgency=medium
 
   [ Maximiliano Curia ]
