--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kidletime (5.12.0-1~) UNRELEASED; urgency=medium
+kidletime (5.12.0-1) unstable; urgency=medium
 
   * New upstream release (5.12.0).
 
- -- Maximiliano Curia <maxy@debian.org>  Tue, 07 Jul 2015 17:36:44 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Thu, 09 Jul 2015 12:42:57 +0200
 
 kidletime (5.11.0-1) unstable; urgency=medium
 
