--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
-kidletime (5.10.0-0ubuntu2) UNRELEASED; urgency=medium
+kidletime (5.12.0-0ubuntu1) UNRELEASED; urgency=medium
 
+  [ Jonathan Riddell ]
   * Add pkg-config
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 15 Jun 2015 07:08:38 +0200
+  [ Scarlett Clark ]
+  * New upstream release
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 10 Jul 2015 08:11:35 -0700
 
 kidletime (5.10.0-0ubuntu1) wily; urgency=medium
 
