--- a/debian/changelog
+++ b/debian/changelog
@@ -7,8 +7,11 @@ kidletime (5.12.0-0ubuntu1) UNRELEASED; urgency=medium
   * New upstream release
   * Fix merge, remove unused broken backport.
 
+  [ José Manuel Santamaría Lema ]
+  * Update installed files.
+
  -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 10 Jul 2015 08:11:35 -0700
- 
+
 kidletime (5.11.0-1) unstable; urgency=medium
 
   * New upstream release (5.10.0).
