--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,9 @@ kidletime (5.12.0-0ubuntu1) UNRELEASED; urgency=medium
   [ José Manuel Santamaría Lema ]
   * Update installed files.
 
+  [ Scarlett Clark ]
+  * Vivid backport. 
+
  -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 10 Jul 2015 08:11:35 -0700
 
 kidletime (5.11.0-1) unstable; urgency=medium
