--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kidletime (5.12.0-0ubuntu1) UNRELEASED; urgency=medium
+kidletime (5.12.0-0ubuntu1) wily; urgency=medium
 
   [ Jonathan Riddell ]
   * Add pkg-config
@@ -10,7 +10,7 @@ kidletime (5.12.0-0ubuntu1) UNRELEASED; urgency=medium
   [ José Manuel Santamaría Lema ]
   * Update installed files.
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 10 Jul 2015 08:11:35 -0700
+ -- Scarlett Clark <sgclark@kubuntu.org>  Mon, 03 Aug 2015 14:31:20 +0200
 
 kidletime (5.11.0-1) unstable; urgency=medium
 
