--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kidletime (5.13.0-0ubuntu1) UNRELEASED; urgency=medium
+
+  * new upstream release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Fri, 07 Aug 2015 15:37:58 +0200
+
 kidletime (5.12.0-0ubuntu1) wily; urgency=medium
 
   [ Jonathan Riddell ]
