--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kidletime (5.13.0-0ubuntu1) UNRELEASED; urgency=medium
+kidletime (5.13.0-0ubuntu1) wily; urgency=medium
 
   [ Jonathan Riddell ]
   * new upstream release
@@ -6,7 +6,7 @@ kidletime (5.13.0-0ubuntu1) UNRELEASED; urgency=medium
   [ José Manuel Santamaría Lema ]
   * Update symbols files.
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Fri, 07 Aug 2015 15:37:58 +0200
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 10 Aug 2015 13:12:09 +0200
 
 kidletime (5.12.0-0ubuntu1) wily; urgency=medium
 
