--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kidletime (5.12.0-2~) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Maximiliano Curia <maxy@debian.org>  Wed, 12 Aug 2015 12:11:52 +0200
+
 kidletime (5.12.0-1) unstable; urgency=medium
 
   * New upstream release (5.12.0).
