--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 kidletime (5.12.0-2~) UNRELEASED; urgency=medium
 
-  * 
+  * Drop XS-Testsuite field
 
  -- Maximiliano Curia <maxy@debian.org>  Wed, 12 Aug 2015 12:11:52 +0200
 
