--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-kidletime (5.12.0-2~) UNRELEASED; urgency=medium
+kidletime (5.13.0-1~) UNRELEASED; urgency=medium
 
   * Drop XS-Testsuite field
+  * New upstream release (5.13.0).
 
- -- Maximiliano Curia <maxy@debian.org>  Wed, 12 Aug 2015 12:11:52 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Wed, 12 Aug 2015 15:08:39 +0200
 
 kidletime (5.12.0-1) unstable; urgency=medium
 
