--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ kidletime (5.13.0-1~) UNRELEASED; urgency=medium
 
   * Drop XS-Testsuite field
   * New upstream release (5.13.0).
+  * Update symbols files.
 
  -- Maximiliano Curia <maxy@debian.org>  Wed, 12 Aug 2015 15:08:39 +0200
 
