--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ kidletime (5.13.0-1~) UNRELEASED; urgency=medium
   * New upstream release (5.13.0).
   * Update symbols files.
   * Update install files.
+  * Add the plugin symbols.
 
  -- Maximiliano Curia <maxy@debian.org>  Wed, 12 Aug 2015 15:08:39 +0200
 
