--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kidletime (5.13.0-1~) UNRELEASED; urgency=medium
+kidletime (5.13.0-1) unstable; urgency=medium
 
   * Drop XS-Testsuite field
   * New upstream release (5.13.0).
@@ -6,7 +6,7 @@ kidletime (5.13.0-1~) UNRELEASED; urgency=medium
   * Update install files.
   * Add the plugin symbols.
 
- -- Maximiliano Curia <maxy@debian.org>  Wed, 12 Aug 2015 15:08:39 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Wed, 12 Aug 2015 22:33:31 +0200
 
 kidletime (5.12.0-1) unstable; urgency=medium
 
