--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kidletime (5.16.0-1~) UNRELEASED; urgency=medium
+kidletime (5.16.0-1) unstable; urgency=medium
 
   * New upstream release (5.16.0).
 
- -- Maximiliano Curia <maxy@debian.org>  Tue, 17 Nov 2015 11:42:46 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 30 Nov 2015 12:12:38 +0100
 
 kidletime (5.15.0-1) unstable; urgency=medium
 
