--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-kidletime (5.19.0-1~) UNRELEASED; urgency=medium
+kidletime (5.19.0-1) experimental; urgency=medium
 
   * New upstream release (5.19.0).
   * Update symbols files from buildds logs (5.18.0-1).
 
- -- Maximiliano Curia <maxy@debian.org>  Sat, 06 Feb 2016 18:59:36 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Sat, 13 Feb 2016 15:15:53 +0100
 
 kidletime (5.18.0-1) experimental; urgency=medium
 
