--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kidletime (5.18.0-0ubuntu1) UNRELEASED; urgency=medium
+kidletime (5.18.0-0ubuntu1) xenial; urgency=medium
 
   [ Scarlett Clark ]
   * New upstream release Xenial
