--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,13 @@
-kidletime (5.26.0-1~1.gbpc19466) UNRELEASED; urgency=medium
+kidletime (5.26.0-1) unstable; urgency=medium
 
-  ** SNAPSHOT build @c1946638c949332bcaec87de75527e94b0dca818 **
-
+  [ Automatic packaging ]
   * Update build-deps and deps with the info from cmake
   * Update symbols files from buildds logs (5.25.0-1).
 
- -- Automatic packaging <maxy+jenkins@gnuservers.com.ar>  Sat, 10 Sep 2016 14:57:00 +0200
+  [ Maximiliano Curia ]
+  * Bump group breaks (5.26)
+
+ -- Maximiliano Curia <maxy@debian.org>  Thu, 29 Sep 2016 11:56:24 +0200
 
 kidletime (5.25.0-1) unstable; urgency=medium
 
