--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kidletime (5.35.0-1~) UNRELEASED; urgency=medium
+
+  * New upstream release (5.35.0).
+
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 26 Jun 2017 17:35:56 +0200
+
 kidletime (5.28.0-1) unstable; urgency=medium
 
   [ Automatic packaging ]
