--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kidletime (5.36.0-1~) UNRELEASED; urgency=medium
+kidletime (5.36.0-1) experimental; urgency=medium
 
   [ Maximiliano Curia ]
   * New upstream release (5.35.0).
@@ -8,6 +8,8 @@ kidletime (5.36.0-1~) UNRELEASED; urgency=medium
   * Ignore libxss-dev in hurd
   * watch: Use https uris
   * New upstream release (5.36.0).
+  * Bump group breaks (5.36)
+  * Update build-deps and deps with the info from cmake
 
   [ Harald Sitter ]
   * add optional fallback dependency
@@ -18,7 +20,7 @@ kidletime (5.36.0-1~) UNRELEASED; urgency=medium
   * Add signing key
   * also include signing-key
 
- -- Maximiliano Curia <maxy@debian.org>  Sat, 08 Jul 2017 13:34:03 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Sun, 09 Jul 2017 23:41:13 +0200
 
 kidletime (5.28.0-1) unstable; urgency=medium
 
