--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kidletime (5.41.0-1~) UNRELEASED; urgency=medium
+
+  * New upstream release (5.41.0).
+
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 12 Dec 2017 12:42:19 -0300
+
 kidletime (5.41.0-0neon) xenial; urgency=medium
 
   * New release
@@ -15,12 +21,6 @@ kidletime (5.39.0-0neon) xenial; urgency=medium
   * New release
 
  -- Neon CI <neon@kde.org>  Sun, 15 Oct 2017 11:42:35 +0000
-
-kidletime (5.38.0-1~) UNRELEASED; urgency=medium
-
-  * New upstream release (5.38.0).
-
- -- Maximiliano Curia <maxy@debian.org>  Mon, 18 Sep 2017 16:49:14 +0200
 
 kidletime (5.38.0-0neon) xenial; urgency=medium
 
