--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
-kidletime (5.41.0-1~) UNRELEASED; urgency=medium
+kidletime (5.41.0-1) experimental; urgency=medium
 
   * New upstream release (5.41.0).
+  * Bump Standards-Version to 4.1.2.
+  * Update build-deps and deps with the info from cmake
+  * Bump group breaks (5.41)
+  * Release to experimental
 
- -- Maximiliano Curia <maxy@debian.org>  Tue, 12 Dec 2017 12:42:19 -0300
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 15 Dec 2017 10:42:41 -0300
 
 kidletime (5.41.0-0neon) xenial; urgency=medium
 
